--- a/src/componentes/componentes.css
+++ b/src/componentes/componentes.css
@@ -143,7 +143,7 @@ input[value=" vegetariana"]:focus + svg {
 .comanda ul { 
 	list-style:none; 
 	float:left; 
-	width:38vw; 
+	width:37vw; 
 	margin:0; 
 	border:1px solid #f2f3f3;
 	padding:5px;
@@ -158,16 +158,15 @@ input[value=" vegetariana"]:focus + svg {
 }
 .comanda ul li:first-child{
     margin-right: 30px;
-    text-indent: 15px;
+    text-indent: 13px;
     font-weight: bolder;
-    white-space: pre-wrap;
     text-align-last: justify;
     font-size: 30px;
 }
 .orden {
     background-color: #ffff;
-    height: 24em;
-    overflow: scroll;
+    height: 50vh;
+    overflow: auto;
     
 }
 .datos {
@@ -189,7 +188,7 @@ font-weight:bold;
 }
 .total {
     font-size: 25px;
-    padding: 5%;
+    padding: 2%;
     text-align: center;
     background-color: #ff8e04a6;
 }
@@ -211,7 +210,11 @@ justify-content: space-between;
     margin-left: -20%;
 }
 
-.comanda .btn-2 {
-  width: 180px;
-margin: 5px 10px 5px 10px;
+.btn-comanda {
+ display: flex;
+ justify-content: space-around;
+ padding: 2%;
+}
+.btn-comanda button {
+  width: 38%;
 }
