--- a/src/templates/templates.css
+++ b/src/templates/templates.css
@@ -55,7 +55,6 @@ body {
   .salon-content {
     display: flex;
     flex-direction: row;
-    height: 20vh;
     margin: 2vw 0 0 3vw; 
   }
   .salon-content nav {
@@ -96,4 +95,43 @@ body {
     margin: -6vw 0 0 2vw;
     height: 1vh;
     width: 25vw;
+  }
+
+  @media all and (orientation: portrait){
+    .fondo-inicio{
+      height: 100vh;
+      position: absolute;
+      width: 100vw;
+    }
+    .inicio {
+      background-color: rgba(245, 228, 228, 0.65);
+      height: 80vh;
+      width: 70vw;
+      margin-top: 10vh;
+      margin-left: 15vw;
+    }
+    .logoBurger {
+      width: 50vw;
+      height: 32vw;
+    }
+    .salon-content {
+      flex-direction: column;
+    }
+    .menu {
+      height: 43vh;
+    }
+    .menu div {
+      display: flex;
+      flex-direction: row ;
+    }
+    .salon-content nav {
+      flex-direction: column;
+      justify-content: center;
+      margin-right: 5vw;
+    }
+    .factura {
+      margin-left: 4vw;
+      width: 70vw;
+      height: 45vh;
+    }
   }
