--- a/src/templates/cocina.css
+++ b/src/templates/cocina.css
@@ -64,6 +64,7 @@ width: 100%;
     font-size: 20px;
     padding: 5px;
     height: 50px;
+    border-bottom: 1px dashed #d6a2ac;
 }
 .orden-preparacion .li-orden:first-child {
     height: 30px;
